--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,11 +1,19 @@
 img {
-  height: 40px;
+  height: 150px;
 }
 
 .card {
   border: 2px solid black;
   border-radius: 5px;
-  background: lightgrey;
-  max-width: 30%;
-  
+  min-width: 30vw;  
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+}
+
+.card-description {
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
