--- a/src/components/CardContainer/CardContainer.css
+++ b/src/components/CardContainer/CardContainer.css
@@ -5,3 +5,12 @@
 .results-category-headline{
   text-align: center;
 }
+
+.results-category-box {
+  border: 2px solid black;
+  border-radius: 2px;
+  padding: 10px;
+  margin: 10px;
+  background: black;
+  color: white;
+}
