--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,17 @@
 * {
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&display=swap");
+}
+
+a {
+  text-decoration: none;
+}
+
+.main{
+  margin-bottom: 10px;
+
+}
