Refine color palette

--- a/src/components/QuizQuestion/QuizQuestion.css
+++ b/src/components/QuizQuestion/QuizQuestion.css
@@ -10,7 +10,7 @@
 
 .quiz-question-full {
   margin: 40px 10px 40px 10px;
-  background-color: #A09D80;
+  background-color: white;
   padding: 10px 10px 20px 10px;
   border-radius: 2px;
 }
