--- a/src/containers/Quiz/Quiz.css
+++ b/src/containers/Quiz/Quiz.css
@@ -3,7 +3,7 @@ fieldset {
   max-width: 700px;
   margin: auto;
   margin-top: 30px;
-  background-color: #DDDDDD;
+  background-color: #B2B2B2;
   border-radius: 2px;
   border:none;
 }
