--- a/src/containers/Quiz/Quiz.css
+++ b/src/containers/Quiz/Quiz.css
@@ -3,9 +3,10 @@ fieldset {
   max-width: 700px;
   margin: auto;
   margin-top: 30px;
-  background-color: #B2B2B2;
   border-radius: 2px;
-  border:none;
+  border: none;
+  color: #242B28;
+  background-color: #8EA99E;
 }
 
 label {
