--- a/src/components/WelcomePage/WelcomePage.css
+++ b/src/components/WelcomePage/WelcomePage.css
@@ -4,8 +4,8 @@
   border-radius: 6px;
   margin: 50px 400px 0px 400px;
   padding: 20px 10px 20px 10px;
-  background-color: #6A6A6A;
-  color: white;
+  color: #242B28;
+  background-color: #8EA99E;
 } 
 
 .welcome-header {
