Add mapState and mapDispatch testing to ResultsPage

--- a/src/components/WelcomePage/WelcomePage.css
+++ b/src/components/WelcomePage/WelcomePage.css
@@ -1,6 +1,6 @@
 .welcome-page {
   text-align: center;
-  border: 2px solid grey;
+  /* border: 2px solid grey; */
   border-radius: 6px;
   margin: 50px 400px 0px 400px;
   padding: 20px 10px 20px 10px;
