--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -3,14 +3,13 @@ img {
 }
 
 .card {
-  /* border: 2px solid black; */
   border-radius: 5px;
   min-width: 30vw;  
   margin: 10px 2px 0px 2px;
   padding: 10px;
   text-align: center;
   background: white;
-  color: black;
+  color: #242B28;
 }
 
 .card-description {
