--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,18 +1,23 @@
 nav {
   max-height: 75vh;
   width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0px 0px 0px 0px;
-    padding: 10px 10px 10px 10px;
-    background-color: black;
-    color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 0px 0px 0px;
+  padding: 10px 10px 10px 10px;
+  background-color: #242B28;
+  color: white;
+}
+
+header {
+  display: flex;
 }
 
 .logo{
   color: white;
 }
+
 .nav-menu {
   margin: 10px 50px 10px 10px;
   font-size: 22px;
@@ -21,10 +26,16 @@ nav {
 
 h1 {
   font-size: 60px;
-  margin: 10px 10px 10px 20px;
+  margin: 10px 10px 10px 10px;
 }
 
 .tagline {
   font-size: 16px;
   margin: 0px 0px 0px 20px;
+}
+
+.logo-image {
+  height: 50px;
+  margin: 20px 0px 0px 20px;
+  filter:invert(100%) sepia(1%) saturate(50%) hue-rotate(1deg);
 }
