--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,7 +1,3 @@
-img {
-  height: 150px;
-}
-
 .card {
   border-radius: 5px;
   min-width: 30vw;  
@@ -17,4 +13,15 @@ img {
   -webkit-line-clamp: 2;
   display: -webkit-box;
   -webkit-box-orient: vertical;
+}
+
+.card-brand{
+  font-weight: 800;
+    font-size: 32px;
+    margin: 10px 0px 10px 0px;
+}
+
+.card-img {
+  height: 200px;
+  margin: 10px 0px 10px 0px
 }
